--- a/resume-code/styles.css
+++ b/resume-code/styles.css
@@ -181,7 +181,7 @@ li {
     color: white;
 }
 
-.visitorcount {
+.counter-number {
     position: fixed;
     border-radius: 5px;
     font-size: 16px;
